# mandelbrot

./: .gitattributes  .gitignore  .gitlab-ci.yml  .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  MANDELBROT.md  README.md  RELEASING.md  deny.toml  meson.build  meson.options  org.tunaos.mandelbrot.json
data/: meson.build  org.gnome.Fractal.metainfo.xml.in.in  org.tunaos.mandelbrot.desktop.in.in  org.tunaos.mandelbrot.gschema.xml.in  org.tunaos.mandelbrot.metainfo.xml.in.in  org.tunaos.mandelbrot.service.in
data/resources/: meson.build  resources.gresource.xml
data/resources/stylesheet/: _call.scss  _login.scss  _room_history.scss  _session_view.scss
matrixrtc/: Cargo.toml
matrixrtc/examples/: join_call.rs
matrixrtc/src/: call_membership.rs  call_session.rs  client.rs  encryption_manager.rs  key_transport.rs  lib.rs  livekit_connection.rs  membership_data.rs  membership_manager.rs  outdated_key_filter.rs  session.rs
matrixrtc/tests/: call_membership.rs  call_session.rs  element_call_scenarios.rs  encryption_manager.rs  key_transport.rs  membership_manager.rs  session.rs
matrixrtc/tests/common/: mod.rs
matrixrtc/tests/fixtures/: expected_join_content.json  session_membership_template.json
src/: application.rs  error_page.blp  error_page.rs  intent.rs  main.rs  meson.build  ui-blueprint-resources.in  ui-resources.gresource.xml.in  user_facing_error.rs  walkthrough.rs  window.blp  window.rs
src/account_chooser_dialog/: account_row.rs  mod.rs
src/account_settings/: mod.rs  notifications_page.rs
src/account_settings/encryption_page/: import_export_keys_subpage.rs  mod.rs
src/account_settings/general_page/: change_password_subpage.rs  deactivate_account_subpage.rs  log_out_subpage.rs  mod.rs
src/account_settings/safety_page/: mod.rs
src/account_settings/safety_page/ignored_users_subpage/: ignored_user_row.rs  mod.rs
src/account_settings/user_session/: link_device_subpage.blp  link_device_subpage.rs  mod.rs  user_session_list_subpage.blp  user_session_list_subpage.rs  user_session_row.rs  user_session_subpage.rs
src/account_switcher/: account_switcher_button.rs  account_switcher_popover.rs  avatar_with_selection.rs  session_item.rs
src/components/: action_button.rs  context_menu_bin.rs  mod.rs  user_page.rs
src/components/avatar/: editable.rs  mod.rs
src/components/camera/: mod.rs  qrcode_scanner.rs  viewfinder.rs
src/components/camera/linux/: viewfinder.rs
src/components/crypto/: identity_setup_view.rs  recovery_setup_view.rs
src/components/dialogs/: room_preview.rs  toastable.rs  user_profile.rs
src/components/dialogs/auth/: in_browser_page.rs  mod.rs  password_page.rs
src/components/loading/: bin.rs
src/components/media/: content_viewer.rs  location_viewer.rs  video_player.rs
src/components/media/audio_player/: mod.rs
src/components/pill/: mod.rs  search_entry.rs  source_row.rs
src/components/power_level_selection/: combo_box.rs  popover.blp  popover.rs  row.rs
src/components/rows/: button_count_row.rs  check_loading_row.rs  copyable_row.rs  entry_add_row.rs  loading_button_row.rs  loading_row.rs  removable_row.rs  substring_entry_row.rs  switch_loading_row.rs
src/identity_verification_view/: accept_request_page.blp  accept_request_page.rs  cancelled_page.rs  choose_method_page.rs  completed_page.blp  completed_page.rs  confirm_qr_code_page.blp  confirm_qr_code_page.rs  mod.rs  no_supported_methods_page.rs  qr_code_scanned_page.blp  qr_code_scanned_page.rs  room_left_page.rs  sas_emoji.rs  sas_page.rs  scan_qr_code_page.rs  wait_for_other_page.blp  wait_for_other_page.rs
src/login/: advanced_dialog.rs  greeter.blp  greeter.rs  homeserver_page.blp  homeserver_page.rs  in_browser_page.rs  local_server.rs  method_page.rs  mod.blp  mod.rs  qr_code_page.blp  qr_code_page.rs  session_setup_view.blp  session_setup_view.rs
src/secret/: linux.rs
src/session/: mod.rs  session_settings.rs
src/session/call/: client_api.rs  media.rs  mod.rs
src/session/notifications/: mod.rs
src/session/room/: mod.rs  permissions.rs
src/session/room/timeline/: mod.rs
src/session/room_list/: mod.rs
src/session/sidebar_data/: item_list.rs
src/session/sidebar_data/section/: name.rs
src/session/space_hierarchy/: child.rs  mod.rs
src/session_view/: content.blp  content.rs  create_room_dialog.rs  invite.rs  invite_request.rs  media_viewer.rs  mod.rs
src/session_view/call/: call_bar.blp  call_bar.rs  dialog.rs  mod.blp  mod.rs  participant_tile.blp  participant_tile.rs  prescreen.blp  prescreen.rs  state.rs
src/session_view/create_direct_chat_dialog/: mod.rs
src/session_view/explore/: mod.rs  public_room_row.rs  server_row.rs  servers_popover.rs
src/session_view/room_details/: edit_details_subpage.rs  general_page.rs  history_visibility_subpage.rs  join_rule_subpage.rs  member_row.rs  mod.rs
src/session_view/room_details/addresses_subpage/: completion_popover.rs  mod.rs
src/session_view/room_details/history_viewer/: audio.rs  audio_row.rs  file.rs  file_row.rs  visual_media.rs  visual_media_item.rs
src/session_view/room_details/invite_subpage/: mod.rs  row.rs
src/session_view/room_details/members_page/: mod.rs
src/session_view/room_details/permissions/: add_members_subpage.rs  member_row.rs  members_subpage.rs  permissions_subpage.rs  select_member_row.rs
src/session_view/room_details/upgrade_dialog/: mod.rs
src/session_view/room_history/: call_row.blp  call_row.rs  divider_row.rs  event_row.rs  event_timestamp.blp  event_timestamp.rs  mod.blp  mod.rs  thread_panel.blp  thread_panel.rs  title.rs  typing_row.rs  verification_info_bar.rs
src/session_view/room_history/event_actions/: context_menu.blp  context_menu.rs  group.rs  properties_dialog.rs  quick_reaction_chooser.rs
src/session_view/sidebar/: icon_item_row.rs  mod.blp  mod.rs  room_row.rs  section_row.rs  verification_row.rs
src/session_view/space_overview/: child_row.blp  child_row.rs  mod.blp  mod.rs  subpage.blp  subpage.rs
src/utils/: expression_list_model.rs
src/utils/media/: audio_recorder.rs  mod.rs
src/utils/media/image/: mod.rs
(+88 files in other folders)
