[package]
name = "fractal"
version = "14.0.0-rc"
authors = ["Julian Sparber <julian@sparber.net>"]
license = "GPL-3.0-or-later"
edition = "2024"
rust-version = "1.93"
publish = false

[package.metadata.cargo-machete]
ignored = [
    # Used by the SecretFile API.
    "serde_bytes",
]

[profile.release]
debug = true
lto = "thin"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

# Please keep dependencies sorted.
[dependencies]
as_variant = "1.3.0"
blurhash = "0.2"
cfg-if = "1"
futures-channel = "0.3"
futures-util = "0.3"
geo-uri = "0.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
indexmap = "2"
linkify = "0.11"
mime = "0.3"
mime_guess = "2"
pulldown-cmark = "0.13"
qrcode = { version = "0.14", default-features = false }
quick_cache = "0.6"
rand = "0.9"
regex = "1"
rmp-serde = "1"
secular = { version = "1", features = ["bmp", "normalization"] }
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
tempfile = "3"
thiserror = "2"
tld = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
webp = { version = "0.3", default-features = false }
zeroize = "1"

# gtk-rs project and dependents. These usually need to be updated together.
adw = { version = "0.9", features = ["v1_8"], package = "libadwaita" }
glycin = { version = "0.1", package = "libglycin-rebind" }
glycin-gtk4 = { version = "0.1", package = "libglycin-gtk4-rebind" }
gst = { version = "0.25", package = "gstreamer" }
gst_app = { version = "0.25", package = "gstreamer-app" }
gst_pbutils = { version = "0.25", package = "gstreamer-pbutils" }
gst_play = { version = "0.25", package = "gstreamer-play" }
gst_video = { version = "0.25", package = "gstreamer-video" }
gtk = { version = "0.11", features = ["gnome_49"], package = "gtk4" }
shumate = { version = "0.8", features = ["v1_1"], package = "libshumate" }
sourceview = { version = "0.11", package = "sourceview5" }

[dependencies.matrix-sdk]
version = "0.17"
# git = "https://github.com/matrix-org/matrix-rust-sdk.git"
# rev = "1d7d6c943bda979b4d48e5af3e8af22dbe2434b8"
default-features = false
features = [
    "automatic-room-key-forwarding",
    "e2e-encryption",
    "markdown",
    "qrcode",
    "socks",
    "sqlite",
    "sso-login",
]

[dependencies.matrix-sdk-store-encryption]
version = "0.17"
# git = "https://github.com/matrix-org/matrix-rust-sdk.git"
# rev = "1d7d6c943bda979b4d48e5af3e8af22dbe2434b8"

[dependencies.matrix-sdk-ui]
version = "0.17"
# git = "https://github.com/matrix-org/matrix-rust-sdk.git"
# rev = "1d7d6c943bda979b4d48e5af3e8af22dbe2434b8"
default-features = false

[dependencies.ruma]
version = "0.15"
# git = "https://github.com/ruma/ruma.git"
# rev = "7680eebd9586669e1a4e5b1fd1c2c691221369d4"
features = [
    "client-api-c",
    "markdown",
    "html-matrix",
    "compat-arbitrary-length-ids",
    "compat-server-signing-key-version",
    "compat-empty-string-null",
    "compat-null",
    "compat-optional",
    "compat-unset-avatar",
    "compat-lax-room-create-deser",
    "compat-lax-room-topic-deser",
]

# Linux-only dependencies.
[target.'cfg(target_os = "linux")'.dependencies]
aperture = "0.12"
ashpd = { version = "0.13.9", default-features = false, features = [
    "camera",
    "location",
    "settings",
    "tracing",
    "tokio",
] }
oo7 = { version = "0.6", default-features = false, features = [
    "native_crypto",
    "tokio",
    "tracing",
] }

[dev-dependencies]
assert_matches2 = "0.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"
new_without_default = "allow"
struct_field_names = "allow"
unsafe_derive_deserialize = "allow"
wildcard_imports = "allow"
