option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'beta',
    'development',
    'hack',
    'build-env',
  ],
  value: 'default',
  description: 'The build profile for Fractal. One of "default", "beta", "development" or "hack".'
)
option(
  'calls-media',
  type : 'boolean',
  value : false,
  description: 'Whether to enable the media layer for native calls (LiveKit).'
)
option(
  'disable-glycin-sandbox',
  type : 'boolean',
  value : false,
  description: 'Whether the sandbox of glycin should be disabled.' +
               'This is only useful during development.'
)
