[package]
name = "mandelbrot-matrixrtc"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Pure-logic MatrixRTC session and membership management for Mandelbrot"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"

[dependencies.ruma]
version = "0.16"
features = ["events", "unstable-msc3401"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
