[package]
name = "mandelbrot-matrixrtc"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Pure-logic MatrixRTC session and membership management for Mandelbrot"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
getrandom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"

[dependencies.ruma]
version = "0.16"
features = ["events", "unstable-msc3401"]

# Optional media layer (feature `livekit`).
[dependencies.livekit]
version = "0.7.53"
optional = true
default-features = false
features = ["rustls-tls-webpki-roots"]

[dependencies.livekit-api]
version = "0.5.6"
optional = true
default-features = false
features = ["access-token", "signal-client-tokio", "rustls-tls-webpki-roots"]

[dependencies.reqwest]
version = "0.12"
optional = true
default-features = false
features = ["rustls-tls-webpki-roots", "json"]

[features]
# Media layer using the LiveKit Rust SDK. Off by default to keep the
# conformance test builds dependency-light.
livekit = ["dep:livekit", "dep:livekit-api", "dep:reqwest"]

[[example]]
name = "join_call"
required-features = ["livekit"]

[dev-dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "test-util",
] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
